--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Prata&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+    font-family: "outfit", sans-serif;
+}
 .slider{
     -webkit-appearance: none;
     height:100%;
